Process CF reports for John Weinstein

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,11 +9,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6e21223a-8373-44a3-a1a4-ecd190d31380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import pandas as pd\n",
+    "from PyPDF2 import PdfReader\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bffb46db-dfd7-4766-aa65-690f4aa5f07d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONTRIB_REGEX = r'Full Name of Contrib.*\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\n'\n",
+    "RECEIPT_REGEX = r'Full Name \\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(.*)\\n(\\d+)\\n(\\d+)\\n(\\d+)\\nReceipt Description\\n.*\\n'\n",
+    "UNITEMIZED_REGEX = r'Unitemized  Contributions Received - \\$ 50.00 or Less Per Contributor\\nTOTAL for the Reporting Period           \\(1\\)\\n\\$\\n(.*)\\n'\n",
+    "\n",
+    "def flatten(l):\n",
+    "    return [item for sublist in l for item in sublist]\n",
+    "\n",
+    "def get_contributions(name):\n",
+    "    contributions = []\n",
+    "    for file in glob.glob('input/%s_*.pdf' % name.capitalize()):\n",
+    "        contributions.append(flatten(process_report(file)))\n",
+    "\n",
+    "    df = pd.DataFrame(\n",
+    "        flatten(contributions),\n",
+    "        columns=['name', 'address1', 'city', 'state', 'zipcode', 'amount', 'month', 'day', 'year'])\n",
+    "    df['amount'] = pd.to_numeric(df.amount.str.replace(',', ''))\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "def process_report(filename):\n",
+    "    reader = PdfReader(filename)\n",
+    "    text = \"\"\n",
+    "\n",
+    "    for page in reader.pages:\n",
+    "        text += page.extract_text() + \"\\n\"\n",
+    "\n",
+    "    unitemized = re.findall(UNITEMIZED_REGEX, text)\n",
+    "    if len(unitemized) == 0:\n",
+    "        unitemized = []\n",
+    "    else:\n",
+    "        unitemized = [(\n",
+    "            'UNITEMIZED',\n",
+    "            '',\n",
+    "            'PITTSBURGH',\n",
+    "            'PA',\n",
+    "            '',\n",
+    "            unitemized[0],\n",
+    "            '',\n",
+    "            '',\n",
+    "            ''\n",
+    "        )]\n",
+    "\n",
+    "    return [\n",
+    "        re.findall(CONTRIB_REGEX, text),\n",
+    "        re.findall(RECEIPT_REGEX, text),\n",
+    "        unitemized\n",
+    "    ]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a84a39c7-c49b-4533-a02c-684e1450a25d",
    "metadata": {},
    "source": [
     "### John Weinstein (state committee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "468a29e8-9953-44b6-b577-c9d06ee7fa03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_weinstein = get_contributions('Weinstein')\n",
+    "\n",
+    "df_weinstein['name'] = df_weinstein.name.replace({\n",
+    "    \"AMALGAMATED TRANSIT UNION COPE\": \"ATU COPE VOLUNTARY ACCOUNT\",\n",
+    "    \"LABORERS DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
+    "    \"LABORERS' DISTRICT COUNCIL OF WESTERN PENNSYLVANIA\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
+    "    \"MIDATLANTIC POLITICAL LEAGUE - MALPA\": \"MID-ATLANTIC LABORERS' POLITICAL LEAGUE\",\n",
+    "    \"STEAMFITTERS LOCAL UNION 449 PAC FUND\": \"STEAMFITTERS LOCAL UNON #449\",\n",
+    "    \"WESTERN PA LABORERS UNION PAC\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
+    "    \"WESTERN PENNSYLVANIA LABORERS' PAC\": \"WESTERN PENNSYLVANIA LABORERS\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "      <th>pct</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>WESTERN PENNSYLVANIA LABORERS</th>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>0.180471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ATU COPE VOLUNTARY ACCOUNT</th>\n",
+       "      <td>37614.0</td>\n",
+       "      <td>0.075425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FNB CORPORATION PAC</th>\n",
+       "      <td>22500.0</td>\n",
+       "      <td>0.045118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MID-ATLANTIC LABORERS' POLITICAL LEAGUE</th>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>0.044115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FRIENDS OF RANDY MARTINI</th>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.040105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEAMFITTERS LOCAL UNON #449</th>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>0.030078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBEW LOCAL UNION NO. 5 PAC</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AMALGAMATED TRANSIT UNION - LOCAL 85</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JAMES P. GRANT</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.020052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CHARLES HAMMEL III</th>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>0.015039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          amount       pct\n",
+       "name                                                      \n",
+       "WESTERN PENNSYLVANIA LABORERS            90000.0  0.180471\n",
+       "ATU COPE VOLUNTARY ACCOUNT               37614.0  0.075425\n",
+       "FNB CORPORATION PAC                      22500.0  0.045118\n",
+       "MID-ATLANTIC LABORERS' POLITICAL LEAGUE  22000.0  0.044115\n",
+       "FRIENDS OF RANDY MARTINI                 20000.0  0.040105\n",
+       "STEAMFITTERS LOCAL UNON #449             15000.0  0.030078\n",
+       "IBEW LOCAL UNION NO. 5 PAC               10000.0  0.020052\n",
+       "AMALGAMATED TRANSIT UNION - LOCAL 85     10000.0  0.020052\n",
+       "JAMES P. GRANT                           10000.0  0.020052\n",
+       "CHARLES HAMMEL III                        7500.0  0.015039"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_weinstein_topcontribs = df_weinstein.groupby('name').amount.sum().to_frame()\n",
+    "\n",
+    "weinstein_sum = df_weinstein.amount.sum()\n",
+    "df_weinstein_topcontribs['pct'] = df_weinstein_topcontribs.amount / weinstein_sum\n",
+    "\n",
+    "df_weinstein_topcontribs.sort_values(by='amount', ascending=False).head(10)"
    ]
   },
   {
