Process CF reports for Sara Innamorato

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -43,6 +43,7 @@
     "    df = pd.DataFrame(\n",
     "        flatten(contributions),\n",
     "        columns=['name', 'address1', 'city', 'state', 'zipcode', 'amount', 'month', 'day', 'year'])\n",
+    "    df['name'] = df.name.str.upper()\n",
     "    df['amount'] = pd.to_numeric(df.amount.str.replace(',', ''))\n",
     "\n",
     "    return df\n",
@@ -231,6 +232,147 @@
    "metadata": {},
    "source": [
     "### Sara Innamorato (state committee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7da9f58c-0b3a-4e19-aa40-0cf32867f147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_innamorato = get_contributions('Innamorato')\n",
+    "\n",
+    "df_innamorato['name'] = df_innamorato.name.replace({\n",
+    "    \"1776 PAC\": \"1776 PAC (UFCW)\",\n",
+    "    \"AFSCME COUNCIL 13 POL & LEG ACCT\": \"AFSCME COUNCIL 13\",\n",
+    "    \"EVAN SEGAL\": \"EVAN J. SEGAL\",\n",
+    "    \"PENNSYLVANIA SEIU COPE\": \"SEIU HEALTHCARE PA COPE\",\n",
+    "    \"PFT POL ACTION FUND (PGH FED TEACHERS)\": \"PFT POLITICAL ACTION FUND\",\n",
+    "    \"TEAMSERS LOCAL UNION 249\": \"TEAMSTERS LOCAL UNION 249 - DRIVE FUND\",\n",
+    "    \"TEAMSTERS LOCAL UNION 249 DRIVE FUND\": \"TEAMSTERS LOCAL UNION 249 - DRIVE FUND\",\n",
+    "    \"WESTERN PENNSYLVANIA LABORERS POLITICAL ACTION FUND\": \"WESTERN PENNSYLVANIA LABORERS\",\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e2bd0ab-961c-4db8-a466-5cab86fb5050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "      <th>pct</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>UNITEMIZED</th>\n",
+       "      <td>35293.34</td>\n",
+       "      <td>0.109579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EVAN J. SEGAL</th>\n",
+       "      <td>16020.63</td>\n",
+       "      <td>0.049741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEIU HEALTHCARE PA COPE</th>\n",
+       "      <td>11250.00</td>\n",
+       "      <td>0.034929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PENNSYLVANIA SIERRA CLUB PAC</th>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>0.031048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DAVID TURNER</th>\n",
+       "      <td>7650.00</td>\n",
+       "      <td>0.023752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PENNSYLVANIA DEMOCRATIC PARTY</th>\n",
+       "      <td>7613.90</td>\n",
+       "      <td>0.023640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NANCY BERNSTEIN</th>\n",
+       "      <td>6500.00</td>\n",
+       "      <td>0.020181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WOMEN FOR THE FUTURE</th>\n",
+       "      <td>6500.00</td>\n",
+       "      <td>0.020181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALLEGHENY COUNTY DEMOCRATIC DELEGATION</th>\n",
+       "      <td>5750.00</td>\n",
+       "      <td>0.017853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REPRESENT PAC</th>\n",
+       "      <td>5500.00</td>\n",
+       "      <td>0.017076</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          amount       pct\n",
+       "name                                                      \n",
+       "UNITEMIZED                              35293.34  0.109579\n",
+       "EVAN J. SEGAL                           16020.63  0.049741\n",
+       "SEIU HEALTHCARE PA COPE                 11250.00  0.034929\n",
+       "PENNSYLVANIA SIERRA CLUB PAC            10000.00  0.031048\n",
+       "DAVID TURNER                             7650.00  0.023752\n",
+       "PENNSYLVANIA DEMOCRATIC PARTY            7613.90  0.023640\n",
+       "NANCY BERNSTEIN                          6500.00  0.020181\n",
+       "WOMEN FOR THE FUTURE                     6500.00  0.020181\n",
+       "ALLEGHENY COUNTY DEMOCRATIC DELEGATION   5750.00  0.017853\n",
+       "REPRESENT PAC                            5500.00  0.017076"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_innamorato_topcontribs = df_innamorato.groupby('name').amount.sum().to_frame()\n",
+    "\n",
+    "innamorato_sum = df_innamorato.amount.sum()\n",
+    "df_innamorato_topcontribs['pct'] = df_innamorato_topcontribs.amount / innamorato_sum\n",
+    "\n",
+    "df_innamorato_topcontribs.sort_values(by='amount', ascending=False).head(10)"
    ]
   },
   {
