Process 2022 state expenses for Michael Lamb funds

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -384,6 +384,179 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "93e6b7ed-fe94-4cef-b19c-995ce3ab9979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names2022 = [\n",
+    "    'report_id', 'filer_id', 'election_year', 'filer_date', 'cycle',\n",
+    "    'name', 'address1', 'address2', 'city', 'state', 'zipcode',\n",
+    "    'date', 'amount', 'description'\n",
+    "]\n",
+    "\n",
+    "expenses = pd.concat([\n",
+    "    pd.read_csv('input/state_expense_2022.csv', encoding='unicode_escape', usecols=names2022, names=names2022)\n",
+    "])\n",
+    "\n",
+    "expenses.loc[expenses.description.isna(), 'description'] = ''\n",
+    "expenses.loc[expenses.name.isna(), 'name'] = ''\n",
+    "\n",
+    "expenses['description'] = expenses.description.str.upper()\n",
+    "expenses['name'] = expenses.name.str.upper()\n",
+    "expenses['address1'] = expenses.address1.str.upper()\n",
+    "\n",
+    "### Remove malformated vendor\n",
+    "expenses = expenses.drop(expenses[expenses['name'] == 'NCH SOFTWARE'].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "10d2b694-967e-4f0a-aba8-452877d4c235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_lamb = expenses[\n",
+    "    (\n",
+    "        ~expenses.name.isin([\n",
+    "            'FRIENDS OF MICHAEL LAMBERT',\n",
+    "            'FRIENDS OF RICH FITZGERALD'\n",
+    "            'LAW OFFICE OF MICHAEL LAMBERT LLC',\n",
+    "            'MARINE CORPS LEAGUE',\n",
+    "        ])\n",
+    "    ) & (\n",
+    "        (expenses.name.str.contains('MIKE LAMB') |\n",
+    "        expenses.name.str.contains('LAMB FOR PA') |\n",
+    "        expenses.name.str.contains('MICHAEL LAMB'))\n",
+    "    ) | (\n",
+    "        expenses.address1.notna() & (expenses.address1.str.contains(' BOX 1835') | expenses.address1.str.contains('1015 GRANDVIEW'))\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "      <th>pct</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>filer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000142</th>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>0.383275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8000488</th>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>0.351916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8600169</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.069686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9500250</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.069686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009095</th>\n",
+       "      <td>500.0</td>\n",
+       "      <td>0.034843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8600183</th>\n",
+       "      <td>500.0</td>\n",
+       "      <td>0.034843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8600238</th>\n",
+       "      <td>300.0</td>\n",
+       "      <td>0.020906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7900662</th>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.010453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9600257</th>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.010453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005140</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.006969</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          amount       pct\n",
+       "filer_id                  \n",
+       "2000142   5500.0  0.383275\n",
+       "8000488   5050.0  0.351916\n",
+       "8600169   1000.0  0.069686\n",
+       "9500250   1000.0  0.069686\n",
+       "2009095    500.0  0.034843\n",
+       "8600183    500.0  0.034843\n",
+       "8600238    300.0  0.020906\n",
+       "7900662    150.0  0.010453\n",
+       "9600257    150.0  0.010453\n",
+       "2005140    100.0  0.006969"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lamb_topcontribs = df_lamb.groupby('filer_id').amount.sum().to_frame()\n",
+    "\n",
+    "lamb_sum = df_lamb.amount.sum()\n",
+    "df_lamb_topcontribs['pct'] = df_lamb_topcontribs.amount / lamb_sum\n",
+    "\n",
+    "df_lamb_topcontribs.sort_values(by='amount', ascending=False).head(10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1afb2be-038c-4887-9753-cce3e56adc0c",
    "metadata": {},
