Process 2017-21 state expenses for Michael Lamb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -390,6 +390,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "namespre22 = [\n",
+    "    'filer_id', 'election_year', 'cycle',\n",
+    "    'name', 'address1', 'address2', 'city', 'state', 'zipcode',\n",
+    "    'date', 'amount', 'description'\n",
+    "]\n",
+    "\n",
     "names2022 = [\n",
     "    'report_id', 'filer_id', 'election_year', 'filer_date', 'cycle',\n",
     "    'name', 'address1', 'address2', 'city', 'state', 'zipcode',\n",
@@ -397,6 +403,11 @@
     "]\n",
     "\n",
     "expenses = pd.concat([\n",
+    "    pd.read_csv('input/state_expense_2017.csv', encoding='unicode_escape', names=namespre22),\n",
+    "    pd.read_csv('input/state_expense_2018.csv', encoding='unicode_escape', names=namespre22, skiprows=[1333, 22823, 62725, 108098]),\n",
+    "    pd.read_csv('input/state_expense_2019.csv', encoding='unicode_escape', names=namespre22),\n",
+    "    pd.read_csv('input/state_expense_2020.csv', encoding='unicode_escape', names=namespre22, skiprows=[60172]),\n",
+    "    pd.read_csv('input/state_expense_2021.csv', encoding='unicode_escape', names=namespre22, skiprows=[14403, 66485, 66486, 66487, 66488, 66489, 66490, 66491, 87279]),\n",
     "    pd.read_csv('input/state_expense_2022.csv', encoding='unicode_escape', usecols=names2022, names=names2022)\n",
     "])\n",
     "\n",
@@ -474,72 +485,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2000142</th>\n",
-       "      <td>5500.0</td>\n",
-       "      <td>0.383275</td>\n",
+       "      <th>8400326</th>\n",
+       "      <td>56250.00</td>\n",
+       "      <td>0.142927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8000488</th>\n",
-       "      <td>5050.0</td>\n",
-       "      <td>0.351916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8600169</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.069686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9500250</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.069686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009095</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>0.034843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8600183</th>\n",
-       "      <td>500.0</td>\n",
-       "      <td>0.034843</td>\n",
+       "      <td>48550.00</td>\n",
+       "      <td>0.123362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8600238</th>\n",
-       "      <td>300.0</td>\n",
-       "      <td>0.020906</td>\n",
+       "      <td>40350.00</td>\n",
+       "      <td>0.102526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7900662</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>0.010453</td>\n",
+       "      <th>8600169</th>\n",
+       "      <td>37000.00</td>\n",
+       "      <td>0.094014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9600257</th>\n",
-       "      <td>150.0</td>\n",
-       "      <td>0.010453</td>\n",
+       "      <th>20190345</th>\n",
+       "      <td>29763.29</td>\n",
+       "      <td>0.075626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2005140</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.006969</td>\n",
+       "      <th>7900296</th>\n",
+       "      <td>27500.00</td>\n",
+       "      <td>0.069875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8100217</th>\n",
+       "      <td>25000.00</td>\n",
+       "      <td>0.063523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9500250</th>\n",
+       "      <td>18050.00</td>\n",
+       "      <td>0.045864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8200660</th>\n",
+       "      <td>14000.00</td>\n",
+       "      <td>0.035573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20190173</th>\n",
+       "      <td>10000.00</td>\n",
+       "      <td>0.025409</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          amount       pct\n",
-       "filer_id                  \n",
-       "2000142   5500.0  0.383275\n",
-       "8000488   5050.0  0.351916\n",
-       "8600169   1000.0  0.069686\n",
-       "9500250   1000.0  0.069686\n",
-       "2009095    500.0  0.034843\n",
-       "8600183    500.0  0.034843\n",
-       "8600238    300.0  0.020906\n",
-       "7900662    150.0  0.010453\n",
-       "9600257    150.0  0.010453\n",
-       "2005140    100.0  0.006969"
+       "            amount       pct\n",
+       "filer_id                    \n",
+       "8400326   56250.00  0.142927\n",
+       "8000488   48550.00  0.123362\n",
+       "8600238   40350.00  0.102526\n",
+       "8600169   37000.00  0.094014\n",
+       "20190345  29763.29  0.075626\n",
+       "7900296   27500.00  0.069875\n",
+       "8100217   25000.00  0.063523\n",
+       "9500250   18050.00  0.045864\n",
+       "8200660   14000.00  0.035573\n",
+       "20190173  10000.00  0.025409"
       ]
      },
      "execution_count": 9,
