--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "CHARLES HAMMEL III                        7500.0  0.015039"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -474,6 +474,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Committee Number</th>\n",
        "      <th>Committee Name</th>\n",
        "      <th>amount</th>\n",
        "      <th>pct</th>\n",
@@ -482,60 +483,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
+       "      <td>8400326</td>\n",
        "      <td>LOCAL 0005 IBEW PAC</td>\n",
        "      <td>56250.0</td>\n",
        "      <td>0.142927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
+       "      <td>8000488</td>\n",
        "      <td>LOCAL 0027 PLUMBERS UNION PAC</td>\n",
        "      <td>48550.0</td>\n",
        "      <td>0.123362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
+       "      <td>8600238</td>\n",
        "      <td>LOCAL 0449 STEAMFITTERS UNION PAC</td>\n",
        "      <td>40350.0</td>\n",
        "      <td>0.102526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
+       "      <td>8600169</td>\n",
        "      <td>LOCAL 0066 PAC CLUB</td>\n",
        "      <td>37000.0</td>\n",
        "      <td>0.094014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
+       "      <td>7900296</td>\n",
        "      <td>LOCAL 0690 PLUMBERS UNION POL ACTION FUND</td>\n",
        "      <td>27500.0</td>\n",
        "      <td>0.069875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
+       "      <td>8100217</td>\n",
        "      <td>LOCAL 0542 IUOE OPER ENG (NORRISTN)</td>\n",
        "      <td>25000.0</td>\n",
        "      <td>0.063523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>82</th>\n",
+       "      <td>9500250</td>\n",
        "      <td>GREATER PA CARPENTERS PAC</td>\n",
        "      <td>18050.0</td>\n",
        "      <td>0.045864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>58</th>\n",
+       "      <td>8200660</td>\n",
        "      <td>INTL UNION PAINTERS ALLIED TRADE</td>\n",
        "      <td>14000.0</td>\n",
        "      <td>0.035573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
+       "      <td>20190173</td>\n",
        "      <td>WESTERN PENNSYLVANIA LABORERS 2019 PAC</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.025409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
+       "      <td>9300158</td>\n",
        "      <td>INTL BROTHERHOOD BOILERMAKERS 154</td>\n",
        "      <td>7100.0</td>\n",
        "      <td>0.018041</td>\n",
@@ -545,20 +556,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Committee Name   amount       pct\n",
-       "59                        LOCAL 0005 IBEW PAC  56250.0  0.142927\n",
-       "51              LOCAL 0027 PLUMBERS UNION PAC  48550.0  0.123362\n",
-       "64          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0  0.102526\n",
-       "62                        LOCAL 0066 PAC CLUB  37000.0  0.094014\n",
-       "46  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0  0.069875\n",
-       "54        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0  0.063523\n",
-       "82                  GREATER PA CARPENTERS PAC  18050.0  0.045864\n",
-       "58           INTL UNION PAINTERS ALLIED TRADE  14000.0  0.035573\n",
-       "39     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0  0.025409\n",
-       "71          INTL BROTHERHOOD BOILERMAKERS 154   7100.0  0.018041"
+       "   Committee Number                             Committee Name   amount  \\\n",
+       "59          8400326                        LOCAL 0005 IBEW PAC  56250.0   \n",
+       "51          8000488              LOCAL 0027 PLUMBERS UNION PAC  48550.0   \n",
+       "64          8600238          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0   \n",
+       "62          8600169                        LOCAL 0066 PAC CLUB  37000.0   \n",
+       "46          7900296  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0   \n",
+       "54          8100217        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0   \n",
+       "82          9500250                  GREATER PA CARPENTERS PAC  18050.0   \n",
+       "58          8200660           INTL UNION PAINTERS ALLIED TRADE  14000.0   \n",
+       "39         20190173     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0   \n",
+       "71          9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0   \n",
+       "\n",
+       "         pct  \n",
+       "59  0.142927  \n",
+       "51  0.123362  \n",
+       "64  0.102526  \n",
+       "62  0.094014  \n",
+       "46  0.069875  \n",
+       "54  0.063523  \n",
+       "82  0.045864  \n",
+       "58  0.035573  \n",
+       "39  0.025409  \n",
+       "71  0.018041  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +597,7 @@
     "lamb_sum = df_lamb.amount.sum()\n",
     "df_lamb_topcontribs['pct'] = df_lamb_topcontribs.amount / lamb_sum\n",
     "\n",
-    "df_lamb_topcontribs[['Committee Name', 'amount', 'pct']].sort_values(by='amount', ascending=False).head(10)"
+    "df_lamb_topcontribs[['Committee Number', 'Committee Name', 'amount', 'pct']].sort_values(by='amount', ascending=False).head(10)"
    ]
   },
   {
