Begin creating list of common donors

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "951ccabf-318a-4bd6-a59a-0451ebd6431b",
    "metadata": {},
    "outputs": [
@@ -133,63 +133,69 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>name</th>\n",
        "      <th>amount</th>\n",
        "      <th>pct</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>WESTERN PENNSYLVANIA LABORERS</th>\n",
+       "      <th>321</th>\n",
+       "      <td>WESTERN PENNSYLVANIA LABORERS</td>\n",
        "      <td>90000.0</td>\n",
        "      <td>0.180471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ATU COPE VOLUNTARY ACCOUNT</th>\n",
+       "      <th>22</th>\n",
+       "      <td>ATU COPE VOLUNTARY ACCOUNT</td>\n",
        "      <td>37614.0</td>\n",
        "      <td>0.075425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FNB CORPORATION PAC</th>\n",
+       "      <th>104</th>\n",
+       "      <td>FNB CORPORATION PAC</td>\n",
        "      <td>22500.0</td>\n",
        "      <td>0.045118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MID-ATLANTIC LABORERS' POLITICAL LEAGUE</th>\n",
+       "      <th>237</th>\n",
+       "      <td>MID-ATLANTIC LABORERS' POLITICAL LEAGUE</td>\n",
        "      <td>22000.0</td>\n",
        "      <td>0.044115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FRIENDS OF RANDY MARTINI</th>\n",
+       "      <th>114</th>\n",
+       "      <td>FRIENDS OF RANDY MARTINI</td>\n",
        "      <td>20000.0</td>\n",
        "      <td>0.040105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>STEAMFITTERS LOCAL UNON #449</th>\n",
+       "      <th>289</th>\n",
+       "      <td>STEAMFITTERS LOCAL UNON #449</td>\n",
        "      <td>15000.0</td>\n",
        "      <td>0.030078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>IBEW LOCAL UNION NO. 5 PAC</th>\n",
+       "      <th>136</th>\n",
+       "      <td>IBEW LOCAL UNION NO. 5 PAC</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.020052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>AMALGAMATED TRANSIT UNION - LOCAL 85</th>\n",
+       "      <th>10</th>\n",
+       "      <td>AMALGAMATED TRANSIT UNION - LOCAL 85</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.020052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>JAMES P. GRANT</th>\n",
+       "      <th>148</th>\n",
+       "      <td>JAMES P. GRANT</td>\n",
        "      <td>10000.0</td>\n",
        "      <td>0.020052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CHARLES HAMMEL III</th>\n",
+       "      <th>42</th>\n",
+       "      <td>CHARLES HAMMEL III</td>\n",
        "      <td>7500.0</td>\n",
        "      <td>0.015039</td>\n",
        "    </tr>\n",
@@ -198,27 +204,26 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          amount       pct\n",
-       "name                                                      \n",
-       "WESTERN PENNSYLVANIA LABORERS            90000.0  0.180471\n",
-       "ATU COPE VOLUNTARY ACCOUNT               37614.0  0.075425\n",
-       "FNB CORPORATION PAC                      22500.0  0.045118\n",
-       "MID-ATLANTIC LABORERS' POLITICAL LEAGUE  22000.0  0.044115\n",
-       "FRIENDS OF RANDY MARTINI                 20000.0  0.040105\n",
-       "STEAMFITTERS LOCAL UNON #449             15000.0  0.030078\n",
-       "IBEW LOCAL UNION NO. 5 PAC               10000.0  0.020052\n",
-       "AMALGAMATED TRANSIT UNION - LOCAL 85     10000.0  0.020052\n",
-       "JAMES P. GRANT                           10000.0  0.020052\n",
-       "CHARLES HAMMEL III                        7500.0  0.015039"
+       "                                        name   amount       pct\n",
+       "321            WESTERN PENNSYLVANIA LABORERS  90000.0  0.180471\n",
+       "22                ATU COPE VOLUNTARY ACCOUNT  37614.0  0.075425\n",
+       "104                      FNB CORPORATION PAC  22500.0  0.045118\n",
+       "237  MID-ATLANTIC LABORERS' POLITICAL LEAGUE  22000.0  0.044115\n",
+       "114                 FRIENDS OF RANDY MARTINI  20000.0  0.040105\n",
+       "289             STEAMFITTERS LOCAL UNON #449  15000.0  0.030078\n",
+       "136               IBEW LOCAL UNION NO. 5 PAC  10000.0  0.020052\n",
+       "10      AMALGAMATED TRANSIT UNION - LOCAL 85  10000.0  0.020052\n",
+       "148                           JAMES P. GRANT  10000.0  0.020052\n",
+       "42                        CHARLES HAMMEL III   7500.0  0.015039"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_weinstein_topcontribs = df_weinstein.groupby('name').amount.sum().to_frame()\n",
+    "df_weinstein_topcontribs = df_weinstein.groupby('name').amount.sum().to_frame().reset_index()\n",
     "\n",
     "weinstein_sum = df_weinstein.amount.sum()\n",
     "df_weinstein_topcontribs['pct'] = df_weinstein_topcontribs.amount / weinstein_sum\n",
@@ -449,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4a8d2591-aaaf-4efa-8617-cceffc5ff1c1",
    "metadata": {},
    "outputs": [
@@ -474,8 +479,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Committee Number</th>\n",
-       "      <th>Committee Name</th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
        "      <th>amount</th>\n",
        "      <th>pct</th>\n",
        "    </tr>\n",
@@ -556,32 +561,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   Committee Number                             Committee Name   amount  \\\n",
-       "59          8400326                        LOCAL 0005 IBEW PAC  56250.0   \n",
-       "51          8000488              LOCAL 0027 PLUMBERS UNION PAC  48550.0   \n",
-       "64          8600238          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0   \n",
-       "62          8600169                        LOCAL 0066 PAC CLUB  37000.0   \n",
-       "46          7900296  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0   \n",
-       "54          8100217        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0   \n",
-       "82          9500250                  GREATER PA CARPENTERS PAC  18050.0   \n",
-       "58          8200660           INTL UNION PAINTERS ALLIED TRADE  14000.0   \n",
-       "39         20190173     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0   \n",
-       "71          9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0   \n",
-       "\n",
-       "         pct  \n",
-       "59  0.142927  \n",
-       "51  0.123362  \n",
-       "64  0.102526  \n",
-       "62  0.094014  \n",
-       "46  0.069875  \n",
-       "54  0.063523  \n",
-       "82  0.045864  \n",
-       "58  0.035573  \n",
-       "39  0.025409  \n",
-       "71  0.018041  "
+       "      number                                       name   amount       pct\n",
+       "59   8400326                        LOCAL 0005 IBEW PAC  56250.0  0.142927\n",
+       "51   8000488              LOCAL 0027 PLUMBERS UNION PAC  48550.0  0.123362\n",
+       "64   8600238          LOCAL 0449 STEAMFITTERS UNION PAC  40350.0  0.102526\n",
+       "62   8600169                        LOCAL 0066 PAC CLUB  37000.0  0.094014\n",
+       "46   7900296  LOCAL 0690 PLUMBERS UNION POL ACTION FUND  27500.0  0.069875\n",
+       "54   8100217        LOCAL 0542 IUOE OPER ENG (NORRISTN)  25000.0  0.063523\n",
+       "82   9500250                  GREATER PA CARPENTERS PAC  18050.0  0.045864\n",
+       "58   8200660           INTL UNION PAINTERS ALLIED TRADE  14000.0  0.035573\n",
+       "39  20190173     WESTERN PENNSYLVANIA LABORERS 2019 PAC  10000.0  0.025409\n",
+       "71   9300158          INTL BROTHERHOOD BOILERMAKERS 154   7100.0  0.018041"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +590,8 @@
     "lamb_sum = df_lamb.amount.sum()\n",
     "df_lamb_topcontribs['pct'] = df_lamb_topcontribs.amount / lamb_sum\n",
     "\n",
-    "df_lamb_topcontribs[['Committee Number', 'Committee Name', 'amount', 'pct']].sort_values(by='amount', ascending=False).head(10)"
+    "df_lamb_topcontribs = df_lamb_topcontribs.rename(columns={'Committee Number': 'number', 'Committee Name': 'name'})\n",
+    "df_lamb_topcontribs[['number', 'name', 'amount', 'pct']].sort_values(by='amount', ascending=False).head(10)"
    ]
   },
   {
@@ -606,6 +600,83 @@
    "metadata": {},
    "source": [
     "### Liv Bennett (local committee)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6940279-d9cb-4d9c-a14e-251614dff448",
+   "metadata": {},
+   "source": [
+    "### Merge common donors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d5a9fcaa-f90d-4899-98e4-82768c553906",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>amount_wein</th>\n",
+       "      <th>amount_lamb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SALVO PAC</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>3100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TEAMSTERS LOCAL 205 PAC</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      name  amount_wein  amount_lamb\n",
+       "0                SALVO PAC       1000.0       3100.0\n",
+       "1  TEAMSTERS LOCAL 205 PAC        250.0        200.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(\n",
+    "    df_weinstein_topcontribs[['name', 'amount']],\n",
+    "    df_lamb_topcontribs[['name', 'amount']],\n",
+    "    how='inner',\n",
+    "    on='name',\n",
+    "    suffixes=('_wein', '_lamb'))"
    ]
   }
  ],
